DB: rolled back AES cipher, running into issues with strange failures, and the key is in the config so anyone can decrypt it.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -43,10 +43,10 @@ archivist.path.db=${archivist.path.home}/db/archivist
 archivist.path.index=${archivist.path.home}/index
 archivist.path.backups=${archivist.path.home}/backups
 
-archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1;CIPHER=AES
+archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1
 archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
-archivist.datasource.primary.password=B30A81ED-3A37-483A-8BBB-3F08AAF29566
+archivist.datasource.primary.password=
 
 archivist.security.hmacStore=/tmp
 
