Allow Archivist to to be dataless master.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -35,6 +35,8 @@ spring.jackson.serialization-inclusion:non_null
 # Common Archivist/Analyst Settings.
 zorroa.common.index.alias=archivist
 zorroa.common.index.port=9401
+zorroa.common.index.data=true
+zorroa.common.index.master=true
 
 # Archivist Settings
 #
