--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -19,6 +19,14 @@ analyst.path.plugins=${analyst.path.home}/plugins
 
 analyst.plugins.enabled = true
 
+analyst.watermark.enabled = false
+analyst.watermark.min-proxy-width = 385
+analyst.watermark.min-font-size = 8
+analyst.watermark.max-font-size = 72
+analyst.watermark.font-name = Arial Black
+analyst.watermark.template = %{copyright}
+analyst.watermark.copyright = Copyright © 2016
+
 server.port = 8099
 server.address=127.0.0.1
 server.devices=eth0,eth1,wlan0,en0,en1
