--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -19,13 +19,11 @@ analyst.path.plugins=${analyst.path.home}/plugins
 
 analyst.plugins.enabled = true
 
-analyst.watermark.enabled = false
-analyst.watermark.min-proxy-width = 385
-analyst.watermark.min-font-size = 8
-analyst.watermark.max-font-size = 72
+analyst.watermark.enabled = true
+analyst.watermark.min-proxy-width = 384
+analyst.watermark.font-size = 24
 analyst.watermark.font-name = Arial Black
-analyst.watermark.template = %{copyright}
-analyst.watermark.copyright = Copyright © 2016
+analyst.watermark.template = Copyright © 2016
 
 server.port = 8099
 server.address=127.0.0.1
