--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -161,6 +161,18 @@
                             <commandlineArgs>-rf index storage unittest</commandlineArgs>
                         </configuration>
                     </execution>
+
+                    <execution>
+                        <id>Install Analyst</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>/bin/cp</executable>
+                            <commandlineArgs>${project.build.directory}/${project.artifactId}.jar "${user.home}/Library/Application Support/Zorroa/${project.artifactId}/lib"</commandlineArgs>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
 
