--- a/common/src/main/resources/db/mappings/V6__mapping.json
+++ b/common/src/main/resources/db/mappings/V6__mapping.json
@@ -192,7 +192,7 @@
         "imports": {
           "properties": {
             "id": {"type": "integer"},
-            "pipeline": {"type": "integer"},
+            "pipelineId": {"type": "integer"},
             "timestamp": {"type": "date" }
           }
         },
