PluginService: added a test and a test plugin zip with 1 ingestor.

--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -3,5 +3,5 @@ server.port = 8099
 analyst.path.index=unittest/index
 analyst.filesystem.root = unittest/storage
 
-analyst.path.plugins = src/test/resources/plugins
+analyst.path.plugins = src/test/plugins
 analyst.plugins.enabled = false
