Added web interface for administration duties.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -5,6 +5,8 @@
 server.port=8066
 server.address=127.0.0.1
 server.session.timeout=6000
+server.session.persistent=true
+server.session.store-dir=db/sessions
 
 server.ssl.enabled = true
 server.ssl.key-store = classpath:keystore.p12
@@ -15,6 +17,8 @@ server.ssl.key-alias = zorroa
 server.ssl.trust-store = classpath:truststore.p12
 server.ssl.trust-store-password = zorroa
 server.ssl.trust-store-type = PKCS12
+
+spring.thymeleaf.prefix = classpath:templates/
 
 management.security.enabled = false
 endpoints.health.sensitive = false
