ingest: reimplemented start, stop, pause, resume service methods.

--- a/common/src/main/resources/db/mappings/V7__mapping.json
+++ b/common/src/main/resources/db/mappings/V7__mapping.json
@@ -112,6 +112,10 @@
         "state": {
           "index": "not_analyzed",
           "type": "integer"
+        },
+        "queueSize": {
+          "index": "not_analyzed",
+          "type": "integer"
         }
       }
     },
