Ingest execution: refactored ingest execution to do async communcation to the analysts.  Enables progress bar, as well as being able to pause and resume ingests from where you left off.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -77,6 +77,11 @@ archivist.ingest.defaultWorkerThreads=2
 #
 archivist.ingest.batchSize=10
 
+#
+# Tne maximum number of queued units of work each analyst can have.
+#
+archivist.ingest.maxQueueSize = 5
+
 archivist.export.autoStart=true
 archivist.export.basePath=exports
 archivist.export.maxAssetCount=1024
