--- a/common/pom.xml
+++ b/common/pom.xml
@@ -27,6 +27,7 @@
         <dependency>
             <groupId>com.zorroa</groupId>
             <artifactId>sdk</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
