--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -161,7 +161,19 @@
                             <commandlineArgs>-rf index storage unittest</commandlineArgs>
                         </configuration>
                     </execution>
-
+                    <execution>
+                        <id>Install Analyst</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${project.parent.basedir}/install-jar.sh</executable>
+                            <commandlineArgs>
+                                ${project.artifactId}.jar "${project.build.directory}" "${user.home}/Library/Application Support/Zorroa/${project.artifactId}/lib"
+                            </commandlineArgs>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
 
