--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -179,6 +179,12 @@
             <version>1.0.8-1</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
+
         <!-- charts -->
         <dependency>
             <groupId>org.webjars</groupId>
