--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -48,6 +48,7 @@ archivist.path.home=.
 archivist.path.db=${archivist.path.home}/db/archivist
 archivist.path.index=${archivist.path.home}/index
 archivist.path.backups=${archivist.path.home}/backups
+archivist.path.plugins=${archivist.path.home}/plugins
 
 archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1
 archivist.datasource.primary.driver-class-name=org.h2.Driver
