--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -14,3 +14,5 @@ archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
 #
 server.port=7066
 archivist.events.port=7087
+
+archivist.path.plugins=src/test/resources/plugins
