archivist: write a cluster configuration to elastic that the analysts can obtain.  This configuration contains paths to data that needs to be shared beween all nodes.

--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -242,7 +242,7 @@
                         </goals>
                         <configuration>
                             <executable>/bin/rm</executable>
-                            <commandlineArgs>-rf index db/archivist.mv.db exports unittest</commandlineArgs>
+                            <commandlineArgs>-rf index db shared unittest</commandlineArgs>
                         </configuration>
                     </execution>
                     <execution>
