--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -37,51 +37,67 @@ spring.jackson.serialization-inclusion:non_null
 #security.basic.enabled=false
 
 # Common Archivist/Analyst Settings.
-zorroa.common.index.alias=archivist
-zorroa.common.index.port=9401
-zorroa.common.index.data=true
-zorroa.common.index.master=true
+zorroa.cluster.index.alias=archivist
+zorroa.cluster.index.port=9401
+zorroa.cluster.index.data=true
+zorroa.cluster.index.master=true
 
 # Archivist Settings
 #
 archivist.path.home=.
-archivist.path.db=${archivist.path.home}/db/archivist
-archivist.path.index=${archivist.path.home}/index
-archivist.path.backups=${archivist.path.home}/backups
-archivist.path.plugins=${archivist.path.home}/plugins
+archivist.path.db=${archivist.path.home}/db/h2/archivist
+archivist.path.index=${archivist.path.home}/db/index
 
+archivist.path.shared=${archivist.path.home}/shared
+archivist.path.storage=${archivist.path.shared}/storage
+archivist.path.exports=${archivist.path.shared}/exports
+archivist.path.plugins=${archivist.path.shared}/plugins
+archivist.path.models=${archivist.path.shared}/models
+archivist.path.backups=${archivist.path.shared}/backups
+
+##
+## Default external configuration options.  Any configuration option prefixed
+## with 'zorroa.external.' is available to the analysts.
+##
+
+### This is where the analysts would look for shared data.
+zorroa.cluster.path.shared=${archivist.path.shared}
+zorroa.cluster.path.storage=${zorroa.cluster.path.shared}/storage
+zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
+zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
+zorroa.cluster.path.backups=${zorroa.cluster.path.shared}/backups
+zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
+
+##
+## Internal DB configuration.
+##
 archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1
 archivist.datasource.primary.driver-class-name=org.h2.Driver
 archivist.datasource.primary.username=sa
 archivist.datasource.primary.password=
 
-archivist.security.hmacStore=/tmp
-
+##
+## Event port configuration
+##
 archivist.events.port=8087
 archivist.events.ssl=false
 
-archivist.proxies.format=jpg
+##
+## Scheduler configuration.
+##
 
-#
-# The maximum number of ingests that can be running simultaneously.
-#
-archivist.ingest.maxRunningIngests=2
+### The maximum number of ingests that can be running simultaneously.
+archivist.scheduler.maxRunningJobs = 2
 
-#
-# The default number of threads an single ingest will use if not specified
-# on an the ingest
-#
-archivist.ingest.defaultWorkerThreads=2
+### The maximum number of tasks to schedule to an analyst at one time.
+archivist.scheduler.maxBatchSize=10
 
-#
-# The number of paths sent to an analyst to process at one time.
-#
-archivist.ingest.batchSize=10
+### Tne maximum number of queued units of work each analyst can have.
+archivist.scheduler.maxQueueSize = 5
 
-#
-# Tne maximum number of queued units of work each analyst can have.
-#
-archivist.ingest.maxQueueSize = 5
+##
+## Export configuration.
+##
 
 archivist.export.autoStart=true
 archivist.export.basePath=exports
