--- a/common/src/test/resources/test.properties
+++ b/common/src/test/resources/test.properties
@@ -4,5 +4,7 @@ test.prop.double=3.14159
 test.prop.bool=true
 
 zorroa.cluster.index.alias=archivist
+zorroa.cluster.index.path.home=unittest
+zorroa.cluster.index.port=9600
 
 
