--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -194,8 +194,8 @@
         <!-- charts -->
         <dependency>
             <groupId>org.webjars</groupId>
-            <artifactId>morrisjs</artifactId>
-            <version>0.5.1</version>
+            <artifactId>d3js</artifactId>
+            <version>3.5.17</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
