archivist: moved proxy access/streaming back into archivist!

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -55,6 +55,9 @@ archivist.path.plugins=${archivist.path.shared}/plugins
 archivist.path.models=${archivist.path.shared}/models
 archivist.path.backups=${archivist.path.shared}/backups
 
+archivist.watermark.enabled = false
+archivist.watermark.template = Copyright Foo
+
 ##
 ## Default external configuration options.  Any configuration option prefixed
 ## with 'zorroa.external.' is available to the analysts.
@@ -67,6 +70,7 @@ zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
 zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
 zorroa.cluster.path.backups=${zorroa.cluster.path.shared}/backups
 zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
+
 
 ##
 ## Internal DB configuration.
