--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -5,25 +5,9 @@
 analyst.executor.threads = -1
 analyst.master.host = https://127.0.0.1:8066
 
-zorroa.common.index.alias=archivist
-zorroa.common.index.port=9401
-
-analyst.filesystem.class = com.zorroa.analyst.filesystem.UUIDFileSystem
-analyst.filesystem.root = ${analyst.path.home}/storage
-
 analyst.index.data=true
 analyst.path.home=.
-analyst.path.index=${analyst.path.home}/index
-analyst.path.models=${analyst.path.home}/models
-analyst.path.plugins=${analyst.path.home}/plugins
-
-analyst.plugins.enabled = true
-
-analyst.watermark.enabled = true
-analyst.watermark.min-proxy-width = 384
-analyst.watermark.font-size = 24
-analyst.watermark.font-name = Arial Black
-analyst.watermark.template = Copyright © 2016
+analyst.path.index=${analyst.path.home}/db/index
 
 server.port = 8099
 server.address=127.0.0.1
