--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -1,7 +1,13 @@
 server.port = 8099
 
 analyst.path.index=unittest/index
-analyst.filesystem.root = unittest/storage
 
-analyst.path.plugins = src/test/plugins
-analyst.plugins.enabled = false
+zorroa.cluster.index.alias=archivist
+zorroa.cluster.index.port=9401
+
+zorroa.cluster.path.shared=../unittest/shared
+zorroa.cluster.path.storage=${zorroa.cluster.path.shared}/storage
+zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
+zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
+zorroa.cluster.path.backups=${zorroa.cluster.path.shared}/backups
+zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
