Archivist test config:
Look in ../unittest/shared for plugins.  Archivist needs all major
plugins for tests.

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -1,6 +1,4 @@
 
-archivist.export.maxAssetCount=1
-
 archivist.path.index=unittest/index
 
 #
@@ -15,4 +13,7 @@ archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
 server.port=7066
 archivist.events.port=7087
 
-archivist.path.plugins=unittest/shared/plugins
+#
+# Set the shared data path to the plugin installation spot.
+#
+archivist.path.shared=../unittest/shared
