Fix unicode copyright character. [Fixes #126267971]

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -23,7 +23,7 @@ analyst.watermark.enabled = true
 analyst.watermark.min-proxy-width = 384
 analyst.watermark.font-size = 24
 analyst.watermark.font-name = Arial Black
-analyst.watermark.template = Copyright © 2016
+analyst.watermark.template = Copyright \u00A9 2016
 
 server.port = 8099
 server.address=127.0.0.1
