--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -172,26 +172,18 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>net.redhogs.cronparser</groupId>
+            <artifactId>cron-parser-core</artifactId>
+            <version>2.9</version>
+        </dependency>
+
         <!-- web interface depends -->
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>font-awesome</artifactId>
             <version>4.6.3</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>startbootstrap-sb-admin-2</artifactId>
-            <version>1.0.8-1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>net.coobird</groupId>
-            <artifactId>thumbnailator</artifactId>
-            <version>0.4.8</version>
-        </dependency>
-
-        <!-- charts -->
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>d3js</artifactId>
@@ -207,7 +199,11 @@
             <artifactId>jquery</artifactId>
             <version>1.11.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>dropzone</artifactId>
+            <version>4.3.0-2</version>
+        </dependency>
     </dependencies>
 
     <build>
