all: renamed storage to ofs in the shared path.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -49,7 +49,7 @@ archivist.path.db=${archivist.path.home}/db/h2/archivist
 archivist.path.index=${archivist.path.home}/db/index
 
 archivist.path.shared=${archivist.path.home}/shared
-archivist.path.storage=${archivist.path.shared}/storage
+archivist.path.ofs=${archivist.path.shared}/ofs
 archivist.path.exports=${archivist.path.shared}/exports
 archivist.path.plugins=${archivist.path.shared}/plugins
 archivist.path.models=${archivist.path.shared}/models
@@ -65,7 +65,7 @@ archivist.watermark.template = Copyright Foo
 
 ### This is where the analysts would look for shared data.
 zorroa.cluster.path.shared=${archivist.path.shared}
-zorroa.cluster.path.storage=${zorroa.cluster.path.shared}/storage
+zorroa.cluster.path.ofs=${zorroa.cluster.path.shared}/ofs
 zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
 zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
 zorroa.cluster.path.backups=${zorroa.cluster.path.shared}/backups
