archivist: added concept of plugin search path

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -42,11 +42,18 @@ zorroa.cluster.index.port=9401
 zorroa.cluster.index.data=true
 zorroa.cluster.index.master=true
 
+#
 # Archivist Settings
 #
 archivist.path.home=.
 archivist.path.db=${archivist.path.home}/db/h2/archivist
 archivist.path.index=${archivist.path.home}/db/index
+
+#
+# The plugin search path is where the server will look for plugin
+# packages.
+#
+archivist.path.pluginSearchPath=${archivist.path.home}/plugins
 
 archivist.path.shared=${archivist.path.home}/shared
 archivist.path.ofs=${archivist.path.shared}/ofs
