--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -211,6 +211,11 @@
             <artifactId>dropzone</artifactId>
             <version>4.3.0-2</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>Bootstrap-3-Typeahead</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
