elastic: analyst and archivist now bind 0.0.0.0.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -26,25 +26,30 @@ endpoints.health.sensitive = false
 flyway.check-location=true
 
 logging.level.com.googlecore.flyway=DEBUG
-
-#
-# Turn off logging from undertow, we'll log exceptions on our own.
-#
 logging.level.io.undertow.request=warn
 
 spring.jackson.serialization-inclusion:non_null
 
-#security.basic.enabled=false
 
-# Common Archivist/Analyst Settings.
+# Zorroa Settings.
+## Elastic Cluster Settings.
+
+### The name of the elasticsearch index.
 zorroa.cluster.index.alias=archivist
-zorroa.cluster.index.port=9401
-zorroa.cluster.index.data=true
-zorroa.cluster.index.master=true
 
-#
+### The port the archivist elasticsearch TCP transport is running on.
+zorroa.cluster.index.port=9401
+
 # Archivist Settings
-#
+
+## Archivist Elastic Settings
+
+### Determines if the Archivist should store elastic data.
+archivist.index.data=true
+
+### Determines if the Archivist is an elasticsearch master.
+archivist.index.master=true
+
 archivist.path.home=.
 archivist.path.db=${archivist.path.home}/db/h2/archivist
 archivist.path.index=${archivist.path.home}/db/index
