--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # 0 for all CPUs, both physical and logical
 # -1 for 1/2 the number of available CPUS
 analyst.executor.threads = -1
-analyst.master.host = https://127.0.0.1:8066
+analyst.master.host = https://archivist:8066
 
 analyst.index.data=true
 analyst.path.home=.
