archivist: turn off session caching.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -3,10 +3,8 @@
 # Spring and Spring Boot Settings
 #
 server.port=8066
-server.address=127.0.0.1
 server.session.timeout=6000
-server.session.persistent=true
-server.session.store-dir=db/sessions
+server.session.persistent=false
 
 server.ssl.enabled = true
 server.ssl.key-store = classpath:keystore.p12
