analyst: fixed process manager test.  Still requires a zpsgo binary but we'll revisit that later.

--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -6,8 +6,7 @@ zorroa.cluster.index.alias=archivist
 zorroa.cluster.index.port=9401
 
 zorroa.cluster.path.shared=../unittest/shared
-zorroa.cluster.path.storage=${zorroa.cluster.path.shared}/storage
+zorroa.cluster.path.ofs=${zorroa.cluster.path.shared}/storage
 zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
 zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
-zorroa.cluster.path.backups=${zorroa.cluster.path.shared}/backups
 zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
