archivist/analyst: implemented a task logging system to assist with troubleshooting.

--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -10,3 +10,4 @@ zorroa.cluster.path.ofs=${zorroa.cluster.path.shared}/storage
 zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
 zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
 zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
+zorroa.cluster.path.logs=${zorroa.cluster.path.logs}/logs
