--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -64,6 +64,7 @@ archivist.path.exports=${archivist.path.shared}/exports
 archivist.path.plugins=${archivist.path.shared}/plugins
 archivist.path.models=${archivist.path.shared}/models
 archivist.path.backups=${archivist.path.shared}/backups
+archivist.path.logs=${archivist.path.shared}/logs
 
 archivist.watermark.enabled = false
 archivist.watermark.template = Copyright Foo
