--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -211,6 +211,12 @@
             <artifactId>Bootstrap-3-Typeahead</artifactId>
             <version>3.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>d3js</artifactId>
+            <version>4.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
