archivist: updated elastic mapping and SearchService to handle new color mapping.

--- a/common/src/main/resources/db/mappings/V8__mapping.json
+++ b/common/src/main/resources/db/mappings/V8__mapping.json
@@ -246,32 +246,30 @@
           }
         },
         "colors": {
-            "properties": {
-              "original": {
-                "type": "nested",
-                "properties": {
-                  "red": { "type": "integer" },
-                  "green": { "type": "integer"},
-                  "blue": {"type": "integer"},
-                  "hue": {"type": "float"},
-                  "saturation": {"type": "float"},
-                  "brightness": {"type": "float"},
-                  "ratio": {"type": "float"}
-                }
-              },
-              "mapped": {
-                "type": "nested",
-                "properties": {
-                  "red": { "type": "integer" },
-                  "green": { "type": "integer"},
-                  "blue": {"type": "integer"},
-                  "hue": {"type": "float"},
-                  "saturation": {"type": "float"},
-                  "brightness": {"type": "float"},
-                  "ratio": {"type": "float"}
-                }
-              }
+          "type": "nested",
+          "properties": {
+            "red": {
+              "type": "integer"
+            },
+            "green": {
+              "type": "integer"
+            },
+            "blue": {
+              "type": "integer"
+            },
+            "hue": {
+              "type": "float"
+            },
+            "saturation": {
+              "type": "float"
+            },
+            "brightness": {
+              "type": "float"
+            },
+            "ratio": {
+              "type": "float"
             }
+          }
         }
       },
       "dynamic_templates": [
@@ -294,7 +292,7 @@
         },
         {
           "color_template": {
-            "path_match": ".*colors.+$",
+            "path_match": "*.colors",
             "mapping": {
               "type": "nested"
             }
