archivist: removed install plugins, added ../../zorroa-plugin-sdk/dist to the standard search path.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -56,7 +56,7 @@ archivist.path.index=${archivist.path.home}/db/index
 # The plugin search path is where the server will look for plugin
 # packages.
 #
-archivist.path.pluginSearchPath=${archivist.path.home}/plugins
+archivist.path.pluginSearchPath=${archivist.path.home}/plugins:../../zorroa-plugin-sdk/dist
 
 archivist.path.shared=${archivist.path.home}/shared
 archivist.path.ofs=${archivist.path.shared}/ofs
