archivist: addds support for backups, removal of old backups, and removal of old job data. [Fixes #130052601]

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -81,6 +81,7 @@ zorroa.cluster.path.plugins=${zorroa.cluster.path.shared}/plugins
 zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
 zorroa.cluster.path.backups=${zorroa.cluster.path.shared}/backups
 zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
+zorroa.cluster.path.logs=${zorroa.cluster.path.shared}/logs
 
 
 ##
@@ -117,6 +118,11 @@ archivist.export.maxAssetCount=1024
 archivist.export.maxTotalFileSize=500M
 archivist.export.expireTime=1w
 
-archivist.snapshot.basePath=snapshots
-archivist.snapshot.repoName=backups
+# Maintenance options.
+
+### Remove job logs and task data after N days.
+archivist.maintenance.jobs.expireDays = 7
+
+### Remove backup data after the given period of time.
+archivist.maintenance.backups.expireDays = 7
 
