archivist: changed the environment var the archivist looks in to find the SSL certs.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -17,6 +17,8 @@ server.ssl.trust-store-password = zorroa
 server.ssl.trust-store-type = PKCS12
 
 spring.thymeleaf.prefix = classpath:templates/
+spring.http.multipart.max-file-size=100MB
+spring.http.multipart.max-request-size=100MB
 
 management.security.enabled = false
 endpoints.health.sensitive = false
@@ -82,7 +84,7 @@ zorroa.cluster.path.models=${zorroa.cluster.path.shared}/models
 zorroa.cluster.path.backups=${zorroa.cluster.path.shared}/backups
 zorroa.cluster.path.exports=${zorroa.cluster.path.shared}/exports
 zorroa.cluster.path.logs=${zorroa.cluster.path.shared}/logs
-
+zorroa.cluster.path.certs=${zorroa.cluster.path.shared}/certs
 
 ##
 ## Internal DB configuration.
