--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -185,6 +185,12 @@
             <version>2.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+
         <!-- web interface depends -->
         <dependency>
             <groupId>org.webjars</groupId>
