archivist: added ability to pass up your own query fields and boost values, as well as a configuration option for the server to set the default query fields.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -120,6 +120,10 @@ archivist.export.maxAssetCount=1024
 archivist.export.maxTotalFileSize=500M
 archivist.export.expireTime=1w
 
+# Search Options
+archivist.search.queryFields.keywords.all = 1.0
+archivist.search.queryFields.keywords.all.raw = 2.0
+
 # Maintenance options.
 
 ### Remove job logs and task data after N days.
