Moved the SSL certs outside of the class path.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -12,11 +12,11 @@ analyst.path.index=${analyst.path.home}/db/index
 server.port = 8099
 server.devices=eth0,eth1,wlan0,en0,en1
 server.ssl.enabled = true
-server.ssl.key-store = classpath:keystore.p12
+server.ssl.key-store = certs/keystore.p12
 server.ssl.key-store-password = zorroa
 server.ssl.key-password = zorroa
 server.ssl.key-store-type = PKCS12
 server.ssl.key-alias = ingestor
-server.ssl.trust-store = classpath:truststore.p12
+server.ssl.trust-store = certs/truststore.p12
 server.ssl.trust-store-password = zorroa
 
